<resources>
    <string name="app_name" translatable="false">Topicality</string>
    <string name="developer_email" translatable="false">dfloureiro@protonmail.com</string>

    <!--categories-->
    <string name="for_you_category">For you</string>
    <string name="general_category">General</string>
    <string name="sports_category">Sports</string>
    <string name="technology_category">Technology</string>
    <string name="business_category">Business</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="science_category">Science</string>
    <string name="health_category">Health</string>

    <!--bottom navigation-->
    <string name="saved_item_bottom_navigation">For Later</string>
    <string name="news_item_bottom_navigation">Feed</string>
    <string name="top_item_bottom_navigation">Trends</string>
    <string name="settings_bottom_navigation">Settings</string>

    <!--no saved articles layout-->
    <string name="no_articles_saved_to_read_later">No articles saved to read later</string>
    <string name="swipe_cards_down_to_save_them_for_later">Swipe the card down to save the article</string>

    <!--no more articles layout-->
    <string name="that_s_all_the_articles_we_have_for_now">That\'s all the articles we have for now</string>
    <string name="check_the_other_categories_for_more">Check the other categories for more</string>

    <!--preferences-->
    <string name="locale_preference_category_title">Location preferences</string>
    <string name="countries_dialog_title_preference">Countries</string>
    <string name="countries_summary_preference">Get relevant news for this country</string>
    <string name="countries_title_preference">Preferred country</string>
    <string name="languages_dialog_title_preference">Languages</string>
    <string name="languages_summary_preference">Get news written in this language</string>
    <string name="languages_title_preference">Preferred language</string>

    <!--error handling-->
    <string name="button_refresh">Refresh</string>
    <string name="network_connection_error">Network connection error</string>
    <string name="something_went_wrong">Something went wrong</string>

    <!--about-->
    <string name="about_dialog_message">"Topicality is a portuguese open source app to read, save and share news.\n\nTopicality is built by just one developer: Twitter @dfloureiro \n\nAll news are provided by www.newsapi.org. All the content is their responsibility.\n\nYou can checkout the code at https://github.com/dfloureiro/topicality\n\n"</string>
    <string name="about_dialog_title">About</string>
    <string name="about_preference_category_title">About this app</string>
    <string name="about_title_preference">Know more about this app</string>
    <string name="about_summary_preference">Who, what, when</string>

    <!--contact us-->
    <string name="feedback_email_subject">Feedback Topicality Android App</string>
    <string name="feedback_email_chooser">Send email…</string>
    <string name="feedback_email_no_email_client_message">There are no email clients installed.</string>
    <string name="contact_us_title_preference">Contact us</string>
    <string name="contact_us_summary_preference">Send us what you think</string>
</resources>
