<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Location preferences">

        <ListPreference
            android:dialogTitle="@string/countries_dialog_title_preference"
            android:entries="@array/country_names"
            android:entryValues="@array/country_codes"
            android:key="COUNTRY_CODE_KEY"
            android:summary="@string/countries_summary_preference"
            android:title="@string/countries_title_preference" />

        <ListPreference
            android:dialogTitle="@string/languages_dialog_title_preference"
            android:entries="@array/language_names"
            android:entryValues="@array/language_codes"
            android:key="LANGUAGE_CODE_KEY"
            android:summary="@string/languages_summary_preference"
            android:title="@string/languages_title_preference" />

    </PreferenceCategory>

</PreferenceScreen>